--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 TOKEN_KEY = 'mysecretkey'
-EMAIL = krishna.karn.143@gmail.com
-EMAIL_PASSWORD = krishna.karn.143
+# EMAIL = krishna.karn.143@gmail.com
+# EMAIL_PASSWORD = krishna.karn.143
+EMAIL = mkarn@flair-solution.com
+EMAIL_PASSWORD = Password@123!
