--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
 TOKEN_KEY = 'mysecretkey'
-# EMAIL = krishna.karn.143@gmail.com
-# EMAIL_PASSWORD = krishna.karn.143
-EMAIL = mkarn@flair-solution.com
+EMAIL = my_testing@aol.com
 EMAIL_PASSWORD = Password@123!
